[package]
name = "notemine"
version = "0.1.0"
edition = "2021"
description = "A Nostr event miner compiled to WebAssembly"
repository = "https://github.com/sandwichfarm/notemine"
license = "MIT" # Choose an appropriate license

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
sha2 = "0.10"
hex = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6" # Added serde-wasm-bindgen
console_error_panic_hook = "0.1.6" # Added for better error reporting

[profile.release]
opt-level = "z" # Optimize for size; alternatively, use "s" for size or "3" for speed
lto = true
codegen-units = 1
