[package]
name = "notemine-webgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_lib = { path = "../shared_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "0.16", features = ["webgl"] }
wasm-bindgen = "0.2.93"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3.70", features = ["console"] }
hex = "0.4"
futures = "0.3"
futures-intrusive = "0.5"
console_error_panic_hook = "0.1.6"
bytemuck = { version = "1.18", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
