[package]
name = "shared_lib"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
wasm-bindgen = "0.2.93"
js-sys = "0.3"
web-sys = { version = "0.3.70", features = ["console"] }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6"
hex = "0.4"
